--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@react-three/fiber": "^9.1.2",
@@ -21,7 +22,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "@supabase/supabase-js": "^2.43.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
