--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@react-three/fiber": "^9.1.2",
+    "@supabase/supabase-js": "^2.43.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
@@ -22,8 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
-    "three": "^0.177.0",
-    "@supabase/supabase-js": "^2.43.4"
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
