--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.9",
-    "@react-three/fiber": "^9.1.2",
     "@supabase/supabase-js": "^2.43.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -24,14 +23,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
-    "three": "^0.177.0"
+    "tw-animate-css": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4"
+    "tailwindcss": "^4"
   }
 }
